--- a/terraform/modules/api/api.yml
+++ b/terraform/modules/api/api.yml
@@ -344,18 +344,13 @@ paths:
               method.response.header.Access-Control-Allow-Methods: "'GET,POST,DELETE,OPTIONS'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
               method.response.header.Access-Control-Allow-Credentials: "'true'"
-  /jobs/{job_id}/download/{file_id}:
+  /jobs/{job_id}/download:
     get:
       summary: Download a specific file
       security:
         - UserPool: []
       parameters:
         - name: job_id
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: file_id
           in: path
           required: true
           schema:
