--- a/.github/workflows/api-doc.yaml
+++ b/.github/workflows/api-doc.yaml
@@ -41,12 +41,9 @@ jobs:
         run: touch public/.nojekyll
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
-          force_orphan: true
-          enable_jekyll: false
-          commit_message: "docs: update API documentation"
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
+          folder: public
+          branch: gh-pages
+          clean: true
+          single-commit: true
