feat: add CORS headers to API response schema for improved cross-origin requests

--- a/terraform/modules/api/api.yml
+++ b/terraform/modules/api/api.yml
@@ -159,6 +159,19 @@ paths:
                       x-amz-meta-category:
                         type: string
                         example: "financial"
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: "string"
+            Access-Control-Allow-Headers:
+              schema:
+                type: "string"
+            Access-Control-Allow-Methods:
+              schema:
+                type: "string"
+            Access-Control-Allow-Credentials:
+              schema:
+                type: "boolean"
         "400":
           description: Bad request (missing required fields or invalid JSON)
         "403":
